[gd_scene load_steps=12 format=3 uid="uid://wohdyxvvwc2a"]

[ext_resource type="PackedScene" uid="uid://c10ucj5wvv6hj" path="res://entities/platform/platform.tscn" id="1_qk3rk"]
[ext_resource type="Script" uid="uid://rrxdrgx48k3d" path="res://entities/platform/falling_platform/falling_platform.gd" id="2_qp5sf"]
[ext_resource type="Texture2D" uid="uid://b8qsuovr6h60b" path="res://entities/platform/yellow_platform.png" id="3_n2quj"]
[ext_resource type="Texture2D" uid="uid://dflbw382bkxdy" path="res://entities/platform/yellow_platform_chunk.png" id="4_buyae"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ag0l"]
resource_local_to_scene = true
size = Vector2(32, 8)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c44te"]

[sub_resource type="Curve" id="Curve_dhi68"]
_limits = [-360.0, 360.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 360), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_melgf"]
curve = SubResource("Curve_dhi68")

[sub_resource type="Curve" id="Curve_t5bky"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.1, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_mqvd1"]
curve = SubResource("Curve_t5bky")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_54ywy"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(16, 8, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
angle_min = 1.07288e-05
angle_max = 1.00001
angle_curve = SubResource("CurveTexture_melgf")
direction = Vector3(0, 1, 0)
spread = 15.0
initial_velocity_min = 4.0
initial_velocity_max = 8.0
gravity = Vector3(0, 98, 0)
radial_accel_min = -2.23517e-06
radial_accel_max = -2.23517e-06
scale_curve = SubResource("CurveTexture_mqvd1")

[node name="FallingPlatform" instance=ExtResource("1_qk3rk")]
script = ExtResource("2_qp5sf")

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("RectangleShape2D_0ag0l")

[node name="Sprite" parent="VisualRoot" index="0"]
material = SubResource("ShaderMaterial_c44te")
texture = ExtResource("3_n2quj")

[node name="ReappearTimer" type="Timer" parent="." index="2"]
unique_name_in_owner = true
one_shot = true

[node name="ChunkParticles" type="GPUParticles2D" parent="." index="3"]
unique_name_in_owner = true
position = Vector2(0, 4)
emitting = false
texture = ExtResource("4_buyae")
lifetime = 0.8
process_material = SubResource("ParticleProcessMaterial_54ywy")
